Allow null focus, Update detailed item view pane resizing on long tier names.
