# backend/docs/openapi.yaml
@@ -48,28 +48,7 @@ paths:
                       description: Max 50 tiers
                       additionalProperties:
                         type: object
-                        required:
-                          - color
-                        properties:
-                          color:
-                            anyOf:
-                              - enum:
-                                  - red
-                              - enum:
-                                  - orange
-                              - enum:
-                                  - gold
-                              - enum:
-                                  - yellow
-                              - enum:
-                                  - lightgreen
-                              - enum:
-                                  - green
-                              - enum:
-                                  - skyblue
-                              - enum:
-                                  - blue
-                            description: Tier background color
+                        properties: {}
                     items:
                       type: object
                       maxProperties: 500
@@ -111,7 +90,6 @@ paths:
                           required:
                             - id
                             - name
-                            - color
                           properties:
                             id:
                               type: string
@@ -121,25 +99,6 @@ paths:
                               minLength: 1
                               maxLength: 255
                               description: Name of the tier
-                            color:
-                              anyOf:
-                                - enum:
-                                    - red
-                                - enum:
-                                    - orange
-                                - enum:
-                                    - gold
-                                - enum:
-                                    - yellow
-                                - enum:
-                                    - lightgreen
-                                - enum:
-                                    - green
-                                - enum:
-                                    - skyblue
-                                - enum:
-                                    - blue
-                              description: Tier background color
                       items:
                         type: object
                         additionalProperties:
@@ -187,10 +146,12 @@ paths:
               type: object
               properties:
                 focus:
-                  type: string
-                  minLength: 1
-                  maxLength: 255
-                  description: Name of the item to focus
+                  anyOf:
+                    - type: string
+                      minLength: 1
+                      maxLength: 255
+                      description: Name of the item to focus
+                    - type: "null"
                 is_voting:
                   type: boolean
                   description: Determine whether votes should be parsed or ignored
@@ -224,32 +185,12 @@ paths:
               type: object
               required:
                 - name
-                - color
               properties:
                 name:
                   type: string
                   minLength: 1
                   maxLength: 255
                   description: Name of the tier
-                color:
-                  anyOf:
-                    - enum:
-                        - red
-                    - enum:
-                        - orange
-                    - enum:
-                        - gold
-                    - enum:
-                        - yellow
-                    - enum:
-                        - lightgreen
-                    - enum:
-                        - green
-                    - enum:
-                        - skyblue
-                    - enum:
-                        - blue
-                  description: Tier background color
         required: true
       security:
         - cookieAuth: []
@@ -296,25 +237,6 @@ paths:
                   minLength: 1
                   maxLength: 255
                   description: Name of the tier
-                color:
-                  anyOf:
-                    - enum:
-                        - red
-                    - enum:
-                        - orange
-                    - enum:
-                        - gold
-                    - enum:
-                        - yellow
-                    - enum:
-                        - lightgreen
-                    - enum:
-                        - green
-                    - enum:
-                        - skyblue
-                    - enum:
-                        - blue
-                  description: Tier background color
       parameters:
         - schema:
             type: string
